tests/baselines/reference/funduleSplitAcrossFiles.errors.txt
funduleSplitAcrossFiles_module.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
funduleSplitAcrossFiles_module.ts(1,8): error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.


==== funduleSplitAcrossFiles_function.ts (0 errors) ====
    function D() { }
    
==== funduleSplitAcrossFiles_module.ts (2 errors) ====
    module D {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
           ~
!!! error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
        export var y = "hi";
    }
    D.y;